--- a/food-delivery-backend/src/main/resources/application.properties
+++ b/food-delivery-backend/src/main/resources/application.properties
@@ -1,8 +1,17 @@
+#spring.application.name=food-delivery-backend
+#
+#spring.datasource.url=jdbc:h2:mem:food-delivery
+#spring.datasource.username=fd
+#spring.datasource.password=fd
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+
 spring.application.name=food-delivery-backend
 
-spring.datasource.url=jdbc:h2:mem:food-delivery
+spring.datasource.url=jdbc:postgresql://db:5432/food_delivery
 spring.datasource.username=fd
 spring.datasource.password=fd
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
