--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build and push frontend Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./frontend
+          context: ./food-delivery-frontend
           push: true
           tags: |
             ${{ env.IMAGE_FRONTEND }}:latest
@@ -37,7 +37,7 @@ jobs:
       - name: Build and push backend Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./backend
+          context: ./food-delivery-backend
           push: true
           tags: |
             ${{ env.IMAGE_BACKEND }}:latest
