--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
   frontend:
     build: ./food-delivery-frontend
     environment:
-      REACT_APP_API_BASE_URL: http://localhost:8080/api
+      REACT_APP_API_BASE_URL: http://4.232.137.90:8080/api
     ports:
       - "3000:3000"
     depends_on:
