--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   db:
     image: postgres:15
@@ -25,7 +26,7 @@ services:
   frontend:
     build: ./food-delivery-frontend
     environment:
-      REACT_APP_API_BASE_URL: http://4.232.137.90:8080/api
+      VITE_API_BASE_URL: http://4.232.137.90:8080/api
     ports:
       - "3000:3000"
     depends_on:
