--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
   frontend:
     build: ./food-delivery-frontend
     environment:
-      VITE_API_BASE_URL: http://4.232.137.90:8080/api
+      VITE_API_BASE_URL:  http://backend:8080/api
     ports:
       - "3000:3000"
     depends_on:
